# task-scheduling

./: .gitignore  .pylintrc  LICENCE  MANIFEST.in  Progress_Report.docx  README.md  main.py  main_auto.py  matplotlibrc  pyproject.toml  requirements.txt  setup.cfg
Mat/: MC_comp_taskSchedule_lim.m~  PGR_BranchBound.m  PGR_BranchBound_limit.m  branch_update.m  fcn_BB.m  fcn_MCTS_lim.m
Mat/KW/: BB_DATA_SNIPPER.mat  MC_comp_taskSchedule.m  MC_comp_taskSchedule_NN.m  MC_comp_taskSchedule_NN_Linear.m  MC_comp_taskSchedule_NN_Linear_mine.m  MC_comp_taskSchedule_NN_Linear_theirs.m  MC_comp_taskSchedule_lim.m  ParameterGeneration_Linear.m  SchedulerSimulation.m  SchedulerSimulationLoop.m  SchedulerSimulationRPassignment.m  TaskGeneration.m  TaskGenerationLinear.m  TaskGenerationLinearMultipleTimelines.m  TrainNN.m  TrainNN_v2.m  TrainNN_ver_testing.m
Mat/PGR/: PGR_BranchBound.m  PGR_MCTS.m  PGR_MCTS_fast.m  PGR_MCTS_limit_fast.m  cost_linDrop.m  fcn_MCTS.m
Py/: .gitignore  BranchBound.py  FlexDARschedulerClass.py  README.md  RL_priority_data_gen.py  RL_priority_scheduler.py  SL_policy.py  SL_policy_Discrete.py  SL_policy_KW.py  TODO.md  Tree_Search.py  Tree_Search_Mono.py  Tree_Search_Multi.py  __init__.py  branch_update.py  env_rrm.py  env_tasking.py  generators.py  main.py  main_KW.py  main_KW2.py  main_Multi.py  main_Queue.py  main_Queue_SL.py  main_RL.py  main_mono.py  main_online.py  main_run_lim.py  main_train_iter.py  online_problem.py  profiling_script  requirements.txt  scheduling_algorithms.py  sequence2schedule.py  task_loss_fcns.py  task_obj.py  tasks.py  tree_search.py  tree_search2.py  tree_search_run_lim.py
Py/Adam/: env_tasking.py  main.py
Py/FlexDARscheduler/: FlexDARschedulerClass.py  FlexDARschedulerClass2.py
Py/RL_Priority/: RL_priority_Distribution.py  RL_priority_data_gen.py  RL_priority_train.py  env_priority.py
Py/Taylor/: Email_24JUL2020.txt  SL_Input_Output_Pairs.py  task_generation_with_EST_algorithm.py
Py/_deprecated/: main_train_iter.py
Py/_depreciated/: BranchBound_original.py  branch_bound_nolimit.py  main_mono.py  tree_search_200514_seq2sch.py
Py/data/: continuous_relu_c1t8  continuous_relu_c2t8  discrete_relu_c1t12  discrete_relu_c1t4  discrete_relu_c1t8  (+8 more)
Refs/: Scheduler-VRC-FDD-2018-10-16-ktw.docx
_deprecated/: main_train_iter.py
data/: continuous_linear_drop_c1t12  continuous_linear_drop_c1t16  continuous_linear_drop_c1t8  continuous_linear_drop_c2t8  continuous_relu_drop_c1t12  continuous_relu_drop_c1t16  continuous_relu_drop_c1t4  continuous_relu_drop_c1t8  continuous_relu_drop_c2t4  continuous_relu_drop_c2t8  discrete_relu_drop_c1t12  discrete_relu_drop_c1t16  discrete_relu_drop_c1t4  discrete_relu_drop_c1t8  discrete_relu_drop_c2t4  discrete_relu_drop_c2t8  radar_search_c1t6  radar_search_c1t8  radar_track_c1t6  radar_track_c1t8  tensors
docs/: conf.py  index.rst
examples/: _learning_sl.py  basics.py  learning.py  mc_assess.py
images/: double.mplstyle  ieee.mplstyle  style.mplstyle
models/: c1t4.env  c1t4.mdl  c1t8.env  c1t8.mdl  c1t8.pth  imitate_c1t8.pkl  sl_c1t8.env  sl_c1t8.pth
task_scheduling/: .gitignore  README.md  SL_policy_Discrete.py  SL_policy_KW.py  __init__.py  _core.py  _run_limit.py  base.py  main.py  main_KW.py  nodes.py  results.py  setup.cfg  spaces.py  tasks.py  tree_search.py  util.py
task_scheduling/Kevin/: SL_policy_KW.py  main_KW.py
task_scheduling/RL_Priority/: RL_priority_train.py  tile_coding.py  tile_coding_example.py
task_scheduling/Taylor/RL/Integrated DQN (3-16-21)/: DQN_alternative_driver.py
task_scheduling/Taylor/RL/Q-Learning/: n_dimensional_regression.py
task_scheduling/_deprecated/: _learning_sl.py  _run_limit.py  _tf.py  algorithms.py  main_run_lim.py  mcts_v1.py  scheduling_problems.py  tree_search.py
task_scheduling/algorithms/: __init__.py  _wrappers.py  base.py  ensemble.py  free.py  limit.py  util.py  wrappers.py
task_scheduling/data/schedules/: search_track_c1t4_release_0  search_track_c1t4_release_18
task_scheduling/docs/: conf.py  index.rst
task_scheduling/docs/source/: modules.rst  task_scheduling.algorithms.rst  task_scheduling.learning.supervised.rst  task_scheduling.util.rst
task_scheduling/generators/: __init__.py  channel_availabilities.py  channels.py  problems.py  scheduling_problems.py  tasks.py
task_scheduling/learning/: __init__.py  base.py  environments.py  features.py  reinforcement.py
task_scheduling/learning/supervised/: _tf.py  base.py  tf.py  torch.py
task_scheduling/mdp/: __init__.py  base.py  environments.py  features.py  modules.py  reinforcement.py  supervised.py  util.py
task_scheduling/mdp/supervised/: _tf.py  base.py  torch.py
task_scheduling/mdp/supervised/torch/: __init__.py  base.py  modules.py  nets.py
task_scheduling/task_scheduling/: __init__.py  tree_search.py
task_scheduling/task_scheduling/algorithms/: limit.py
task_scheduling/task_scheduling/generators/: scheduling_problems.py  tasks.py
task_scheduling/task_scheduling/learning/: environments.py  features.py  reinforcement.py
task_scheduling/task_scheduling/learning/supervised/: tf.py  torch.py
task_scheduling/task_scheduling/util/: generic.py
task_scheduling/tests/: bb_stats.py  bb_stats2.py  test_seq_num_encoding.py  test_tree_nodes.py
task_scheduling/users/Kevin/: FlexDARschedulerClass2.py  SL_policy_Discrete.py  SL_policy_KW.py  generators.py  main_KW.py  main_online.py  scheduling_algorithms.py  sequence2schedule.py
task_scheduling/users/Kevin/RL_Priority/: RL_priority_Distribution.py
task_scheduling/users/Taylor/RL/DQN/: DQN.py
task_scheduling/users/Taylor/RL/Integrated DQN (3-16-21)/: DQN_alternative_function.py
task_scheduling/users/Taylor/RL/Integrated DQN (9-22-20)/: cost_alternative.py  task_generator_Integrated.py
task_scheduling/users/Taylor/RL/Q-Learning/: cost.py
task_scheduling/util/: __init__.py  info.py  plot.py  results.py
tests/: pytest.ini  test_seq_num_encoding.py  test_tree_nodes.py
users/: Untitled-1.ipynb  auto.py  ex_paper.py  hyper.py  imitate.py  main.py  main_auto.py  make_datasets.py  parallel.py
(+312 files in other folders)
