[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.pylint.main]
disable = [
  "fixme",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-locals",
]
[tool.pylint.basic]
const-naming-style = "any"
good-names-rgxs = "^[_a-z][_a-z0-9]?$"
