[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.pydocstyle] # parameter check D417 not working
add-ignore = [
  "D1",
  "D202",
  "D401",
]
add-select = [
  "D413",
  "D417",
]
convention = "numpy"

# [tool.pylint.main]
# disable = [
#   "fixme",
#   "missing-function-docstring",
#   "too-many-arguments",
#   "too-many-instance-attributes",
#   "too-many-locals",
#   "line-too-long", # "unused-import",
#   "missing-module-docstring",
#   "missing-class-docstring",
#   "no-else-return",
#   "no-else-raise",
# ]

# [tool.pylint.basic]
# const-naming-style = "any"
# good-names-rgxs = "^[_a-z][_a-z0-9]?$"

# [tool.pylint.format]
# max-line-length = 88

# [tool.pylint.parameter_documentation]
# accept-no-param-doc = true
# accept-no-raise-doc = true
# accept-no-return-doc = true
# accept-no-yields-doc = true
# default-docstring-type = "default"
