[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.pydocstyle] # parameter check D417 not working
add-ignore = [
  "D1",
  "D401",
]
add-select = [
  "D413",
  "D417",
]
convention = "numpy"
