[metadata]
name = task-scheduling
version = 0.0.1
author = Paul Rademacher
author_email = paul.rademacher@nrl.navy.mil
description = Create and test scheduling algorithms for abstract tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USNavalResearchLaboratory/task-scheduling
project_urls =
    Bug Tracker = https://github.com/USNavalResearchLaboratory/task-scheduling/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    pandas>=1.2.5
    matplotlib>=3.4.2
    gym>=0.18.0
    dill>=0.3.4
    sortedcontainers>=2.4.0
    torch
    pytorch-lightning
    stable-baselines3
    tabulate
    pyqt5
;package_dir =
;    = .

;[options.packages.find]
;where = .
