[metadata]
name = task-scheduling
version = 0.0.1
author = Paul Rademacher
author_email = paul.rademacher@nrl.navy.mil
description = Create and test scheduling algorithms for abstract tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USNavalResearchLaboratory/task-scheduling
project_urls =
    Bug Tracker = https://github.com/USNavalResearchLaboratory/task-scheduling/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    matplotlib
    pyqt5
    pandas
    tabulate
    gym
    dill
    sortedcontainers
    torch
    pytorch-lightning
    stable-baselines3
;package_dir =
;    = .

;[options.packages.find]
;where = .

[flake8]
max-line-length = 88
# extend-ignore = E203
# select = C,E,F,W,B,B950
extend-ignore = E203, E501
