[metadata]
name = task-scheduling
version = 0.0.1
author = Paul Rademacher
author_email = paul.rademacher@nrl.navy.mil
description = Create and test scheduling algorithms for abstract tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USNavalResearchLaboratory/task-scheduling
project_urls =
    Bug Tracker = https://github.com/USNavalResearchLaboratory/task-scheduling/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.22.3
    matplotlib==3.5.2
    PyQt5==5.15.6
    pandas==1.4.2
    tabulate==0.8.9
    tqdm==4.64.0
    gym==0.21.0
    dill==0.3.4
    sortedcontainers==2.4.0
    torch==1.11.0
    pytorch-lightning==1.6.3
    stable-baselines3==1.5.0
;package_dir =
;    = .

;[options.packages.find]
;where = .

[flake8]
max-line-length = 100
extend-ignore = E203, 
                E501,
