[metadata]
name = task-scheduling
version = 0.0.1
author = Paul Rademacher, Kevin Wagner
author_email = paul.rademacher@nrl.navy.mil, kevin.wagner@nrl.navy.mil
description = Test and assess scheduling algorithms for abstract tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = task_scheduling
packages = find:
python_requires = >=3.6

[options.packages.find]
include = task-scheduling
