[metadata]
name = task-scheduling
version = 0.0.1
author = Paul Rademacher
author_email = paul.rademacher@nrl.navy.mil
description = Create and test scheduling algorithms for abstract tasks
long_description = file: README.md
long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
;package_dir =
;    = .
packages = find:
python_requires = >=3.8

;[options.packages.find]
;where = .
